--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,9 +15,19 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald">
+    
+    <!-- BOOSTRAP-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
     <script src="https://kit.fontawesome.com/b04d3e51a0.js" crossorigin="anonymous"></script>
+
+
+    
     {% block stylesheets %}
         {{ encore_entry_link_tags('app') }}
     {% endblock %}
@@ -28,6 +38,7 @@
     <style>
         html, body {
             height: 100%;
+            width: 100%;
             margin: 0;
             display: flex;
             flex-direction: column;
@@ -156,7 +167,7 @@
         }
 
 
-        /* MEDIA QUERIES - de 425 pxl */
+        /* MEDIA QUERIES - de 425 pxl de la BASE */
         @media all and (max-width: 425px) {
             footer {
                 display: flex;
@@ -168,15 +179,42 @@
             body > footer > ul{
                 text-align: center;
                 padding: 0;
-                margin: 0;
-                
+                margin: 0;    
+            }   
+        }
+
+
+
+        
+         /* MEDIA QUERIES - de 320 pxl de la BASE */
+         @media all and (max-width: 320px) {
+            body > footer > ul{
+                text-align: center;
+                padding: 0;
+                margin: 0;    
+            }
+
+            .listecategorie{
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+            }
+
+            .listecategorie li a{
+                flex-direction: column;
+                justify-content: center;
             }
 
             
         }
 
-
     </style>
+
+
+
+
+
+    
 </head>
 <body>
     <nav id="ONGLET">
@@ -186,14 +224,7 @@
             <li><img src="uploads/images/aeroclublogo.png" style="height: 80px; width: 100px;"></li>
             <li><a href="{{ path('Accueil') }}" style="text-decoration: none;">Aeroclub</a></li>
             
-            <li>
-                <a href="#" style="text-decoration: none;">Listes</a>
-                <ul>
-                    <li><a href="{{ path('app_liste_categorie') }}" style="text-decoration: none;">Liste des Categories</a></li>
-                    <li><a href="{{ path('app_liste_article') }}" style="text-decoration: none;">Liste des Articles</a></li>
-                    <li><a href="{{ path('afficher_les_posts') }}" style="text-decoration: none;">Liste des Posts</a></li>
-                </ul>
-            </li>
+
             {% if not app.user %}
                 <li><a href="{{ path('RegistrationFormType') }}" style="text-decoration: none;">S'Inscrire</a></li>
                 <li><a href="{{ path('app_login') }}" style="text-decoration: none;">Se Connecter</a></li>
@@ -213,10 +244,30 @@
                 <li><a href="{{ path('app_creer_un_post') }}" style="text-decoration: none;">Lancer un Post</a></li>
                 <li><a href="{{ path('app_user_delete') }}" style="text-decoration: none;">Supprimer mon Compte</a></li>
             {% endif %}
+
+            
+            {% if is_granted('ROLE_ADMIN') %}
+                <li>
+                    <a href="{{ path('app_liste_comptesUser') }}" 
+                       style="text-decoration: none;">
+                            Listes des Utilisateurs
+                    </a>
+                </li>
+            {% endif %}
+                
         </ul>
     </nav>
 
-    <div id="content">
+    <!-- Listes des Categories -->
+    <nav class="listecategorie" 
+        style="display: flex; padding: 10px 0 10px 0; font-family: Oswald; font-size: 20px;background-color : #DAE9EC; justify-content: space-around; list-style: none;">
+        {% for categorie in categories %}
+            <li><a href="{{ path('app_articles_par_categorie', {'id': categorie.id}) }}" style="text-decoration: none; color: black;">{{ categorie.name }}</a></li>
+        {% endfor %}
+    </nav>
+
+
+    <div id="content" style="background-color : #DAE9EC;">
         {% block body %}{% endblock %}
     </div>
 
