Ajout de ROLE_MOD  (Modérateur) étant donnée qu'un utilisateur inscrit peut intéragir dans les posts, lancer un nouveau post ou article automatiquement dès qu'un utilisateur s'inscrit. Et également Ajout d'un compte ROLE_ADMIN qui lui seul pourra voir la liste des utilisateurs.

--- a/templates/article/articles_par_categorie.html.twig
+++ b/templates/article/articles_par_categorie.html.twig
@@ -7,11 +7,12 @@
         <div>
             <h1 style="text-align: center;">Articles de la catégorie "{{ categorie.name }}"</h1>
             <br>
-            <ul>
+            <ul style="list-style: none; padding: 0;">
                 {% for article in articles %}
-    <a href="{{ path('app_affiche_un_post', { 'id': article.id }) }}" style="font-size: 20px; padding-bottom: 10px; display: block;">{{ article.title }}</a> <br>
-{% endfor %}
-
+                    <li style="background-color: {{ loop.index is odd ? '#5ED9F4' : 'transparent' }}; padding: 10px; margin-bottom: 10px;">
+                        <a href="{{ path('app_affiche_un_post', { 'id': article.id }) }}" style="font-size: 20px; text-decoration: none; color: black;">{{ article.title }}</a>
+                    </li>
+                {% endfor %}
             </ul>
         </div>
     </div>
