--- a/templates/categorie/new.html.twig
+++ b/templates/categorie/new.html.twig
@@ -72,6 +72,54 @@
 
 
 
+    
+/* CACHER LA PARTIE IMAGES MEDIAS QUERIES 425 */
+@media all and (max-width: 425px) { 
+    #SERVICES{
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      width: 100%;
+      align-items: center;
+    }
+  
+    #EnglobeSERVICE{
+      display: flex;
+      height: auto;
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+      padding: 15px 15px;
+    }
+
+    #EnglobeSERVICE > img{
+        display: flex;
+        height: auto;
+        width: 100%;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .listecategorie{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+    }
+
+    
+  }
+  
+  
+ 
+
+  
+
+
+
+
+
+
 </style>
 
 {% endblock %}
