--- a/templates/categorie/mescategories.html.twig
+++ b/templates/categorie/mescategories.html.twig
@@ -3,30 +3,34 @@
 {% block body %}
     <h1>Liste des catégories</h1>
 
-    <table style="width: 100%; border-collapse: collapse;">
-        <thead>
-            <tr>
-                <th style="border-bottom: 1px solid #ddd; padding: 8px;">Nom des Catégories</th>
-                <th style="border-bottom: 1px solid #ddd; padding: 8px;">Actions</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for categorie in categories %}
+    {% if categories is empty %}
+        <p>Aucune catégorie n'a été créée pour le moment.</p>
+    {% else %}
+        <table style="width: 100%; border-collapse: collapse;">
+            <thead>
                 <tr>
-                    <td style="border-bottom: 1px solid #ddd; padding: 8px;">{{ categorie.name }}</td>
-                    <td style="border-bottom: 1px solid #ddd; padding: 8px; display: inline-flex;">
-                        <form method="post" action="{{ path('app_suppression_categorie', {'id': categorie.id}) }}" onsubmit="return confirm('Voulez-vous vraiment supprimer cette catégorie ?');" style="margin-right: 10px;">
-                            <input type="hidden" name="_method" value="DELETE">
-                            <button class="btn btn-danger">Supprimer</button>
-                        </form>
-
-                        <form method="post" action="{{ path('app_modification_categorie', {'id': categorie.id}) }}" onsubmit="return confirm('Voulez-vous vraiment modifier cette catégorie ?');">
-                            <input type="hidden" name="_method" value="EDIT">
-                            <button class="btn btn-primary">Editer</button>
-                        </form>
-                    </td>
+                    <th style="border-bottom: 1px solid #ddd; padding: 8px;">Nom des Catégories</th>
+                    <th style="border-bottom: 1px solid #ddd; padding: 8px;">Actions</th>
                 </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+            </thead>
+            <tbody>
+                {% for categorie in categories %}
+                    <tr>
+                        <td style="border-bottom: 1px solid #ddd; padding: 8px;">{{ categorie.name }}</td>
+                        <td style="border-bottom: 1px solid #ddd; padding: 8px; display: inline-flex;">
+                            <form method="post" action="{{ path('app_suppression_categorie', {'id': categorie.id}) }}" onsubmit="return confirm('Voulez-vous vraiment supprimer cette catégorie ?');" style="margin-right: 10px;">
+                                <input type="hidden" name="_method" value="DELETE">
+                                <button class="btn btn-danger">Supprimer</button>
+                            </form>
+
+                            <form method="post" action="{{ path('app_modification_categorie', {'id': categorie.id}) }}" onsubmit="return confirm('Voulez-vous vraiment modifier cette catégorie ?');">
+                                <input type="hidden" name="_method" value="EDIT">
+                                <button class="btn btn-primary">Editer</button>
+                            </form>
+                        </td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    {% endif %}
 {% endblock %}
