--- a/templates/user/listecompteUser.html.twig
+++ b/templates/user/listecompteUser.html.twig
@@ -5,27 +5,22 @@
 
 {% block body %}
     <h1>Liste des Utilisateurs</h1>
-    <table>
+    <table style="font-size: 20px; width: 100%; border-collapse: collapse; margin-top: 20px;">
         <thead>
-            <tr>
-                <th>Pseudo</th>
-                <th>Email</th>
-                <th>Role</th>
+            <tr style="background-color: #f2f2f2;">
+                <th style="padding: 10px; border: 1px solid #ddd;">Pseudo</th>
+                <th style="padding: 10px; border: 1px solid #ddd;">Email</th>
+                <th style="padding: 10px; border: 1px solid #ddd;">Rôle</th>
+                <th style="padding: 10px; border: 1px solid #ddd;">Vérifié</th>
             </tr>
         </thead>
         <tbody>
             {% for user in users %}
-                <tr>
-                    <td>{{ user.username }}</td>
-                    <td>{{ user.email }}</td>
-                   
-                   
-                   
-
-                    
-                  
-                   
-                  
+                <tr {% if loop.index is odd %}style="background-color: #5ED9F4;"{% endif %}>
+                    <td style="padding: 10px; border: 1px solid #ddd;">{{ user.username }}</td>
+                    <td style="padding: 10px; border: 1px solid #ddd;">{{ user.email }}</td>
+                    <td style="padding: 10px; border: 1px solid #ddd;">{{ user.roles|join(', ') }}</td>
+                    <td style="padding: 10px; border: 1px solid #ddd;">{{ user.isVerified ? 'Oui' : 'Non' }}</td>
                 </tr>
             {% endfor %}
         </tbody>
